<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">浦东教发院</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">浦东教育发展研究院</string>
    <string name="userid">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">首页</string>
    <string name="inform">教学通知</string>
    <string name="goin">进入系统</string>
    <string name="title_activity_inform">InformActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="xwdt">新闻动态</string>
    <string name="cgzs">成果展示</string>
    <string name="djgz">党建工作</string>
    <string name="input">请输入账号！</string>
    <string name="jrxt">进入系统</string>
    <string name="title_activity_more_inform">MoreInformActivity</string>
    <string name="title_activity_more_home">MoreHomeActivity</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_other_inform">OtherInformActivity</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="title_activity_doc_send">DocSendActivity</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_rece">ReceActivity</string>
    <string name="title_activity_more__rece_">More_Rece_Activity</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_more_inform_rece">More_inform_receActivity</string>
    <string name="title_activity_doc_rece2">DocRece2Activity</string>
    <string name="title_activity_doc_write">DocWriteActivity</string>
    <string name="title_activity_select_person">SelectPersonActivity</string>
    <string name="title_activity_more_rece">MoreReceActivity</string>
    <string name="title_activity_dbsw_gengduo_main">DbswGengduoMainActivity</string>
    <string name="title_activity_dbsw_more">DbswMoreActivity</string>
    <string name="title_activity_dbsw_add">DbswAddActivity</string>
    <string name="title_activity_addgrap">AddgrapActivity</string>
    <string name="title_activity_chakangrap">ChakangrapActivity</string>
    <string name="title_activity_chakandbsw">ChakandbswActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_select2">Select2Activity</string>
    <string name="title_activity_noticewrite">NoticewriteActivity</string>
    <string name="title_activity_docsendmore">DocsendmoreActivity</string>
    <string name="title_activity_otherinformlist">OtherinformlistActivity</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="title_activity_bian_jigrap">BianJigrapActivity</string>
    <string name="title_activity_delgrap">DelgrapActivity</string>
    <string name="title_activity_zwdbgrap">ZwdbgrapActivity</string>
    <string name="title_activity_sel_attach">SelAttachActivity</string>
    <string name="title_activity_more_mydbctivity">MoreMydbctivity</string>
    <string name="title_activity_more_yf_main">MoreYfMainActivity</string>
    <string name="title_activity_dbsw_beizhu">DbswBeizhuActivity</string>
    <string name="title_activity_dbsw_zwrc">DbswZwrcActivity</string>
    <string name="title_activity_addremind">AddremindActivity</string>
    <string name="title_activity_remind">RemindActivity</string>
    <string name="title_activity_rece_notice">ReceNoticeActivity</string>
    <string name="title_activity_send_notice">SendNoticeActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="title_activity_emailwrite">EmailwriteActivity</string>
    <string name="title_activity_moresend">MoresendActivity</string>
    <string name="title_activity_moredraft">MoredraftActivity</string>
    <string name="title_activity_morerecover">MorerecoverActivity</string>
    <string name="title_activity_outeremail_write">OuteremailWriteActivity</string>
    <string name="title_activity_mydoc">MydocActivity</string>
    <string name="title_activity_attach">AttachActivity</string>
    <string name="title_activity_dbsw_attach">DbswAttachActivity</string>

</resources>
