<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/inform_u2">
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
		    android:id="@+id/main_iv_return"
        	android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:src="@drawable/login_u12"
            android:scaleType="fitCenter" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

	<LinearLayout 
	    android:layout_weight="5"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="horizontal"
	    android:gravity="center|center_vertical">
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/login_u2"
	        />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"
	        android:text="@string/title"
	        android:textSize="20sp"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_weight="8"
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal">
	    <EditText 
	        android:id="@+id/login_id"
	        android:layout_width="220dp"
	        android:layout_height="40dp"
	        android:textSize="15sp"
	        android:hint="@string/userid"/>
	    <EditText 
	        android:inputType="textPassword"
	        android:id="@+id/login_pwd"
	        android:layout_width="220dp"
	        android:layout_height="40dp"
	        android:textSize="15sp"
	        android:hint="@string/password"/>
	    <RelativeLayout
	        android:layout_width="220dp"
	        android:layout_height="40dp">
	        <TextView 
	            android:id="@+id/tv_sel"
	            android:layout_width="20dp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:gravity="center"
	            android:text="√"
	            android:textColor="#ffffff"
	            android:textSize="15sp"
	            android:background="@drawable/biankuang"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_toLeftOf="@id/tv_sel"
	            android:layout_centerVertical="true"
	            android:gravity="center"
	            android:text="记住密码"
	            android:textSize="15sp"
	            android:textColor="#000000"/>
	    </RelativeLayout>
	     <TextView 
	        android:id="@+id/login_error"
	        android:layout_width="220dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textColor="#ffff0000"/>
	      <Button 
	        android:id="@+id/btn_login"
	        android:layout_width="220dp"
	        android:layout_height="40dp"
	        android:textColor="#ffffff"
	        android:background="#3da1d5"
	        android:textSize="15sp"
	        android:gravity="center"
	        android:text="@string/login"/>
	</LinearLayout>
</LinearLayout>
