<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_u0"
    android:orientation="vertical"
    tools:context=".StartActivity" >
    <TextView 
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/inform_u2"
        android:text="@string/home"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:gravity="center"
        />
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:background="#33000000"
            android:gravity="center"
            android:orientation="vertical"
            >
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                >
                <View 
                    android:id="@+id/v_dot0"
                    style="@style/dot_style"
                    />
                 <View
                    android:id="@+id/v_dot1"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot2"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot3"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot4"
                    style="@style/dot_style" />
                
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="#ffffff"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView 
                android:id="@+id/mystart1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/mystart1"
                android:scaleType="fitCenter"
                />
            <ImageView 
                android:id="@+id/mystart2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/mystart2"
                android:scaleType="fitCenter"
                />
            <ImageView 
                android:id="@+id/mystart3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/mystart3"
                android:scaleType="fitCenter"
                />
            <ImageView 
                android:id="@+id/mystart4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/mystart4"
                android:scaleType="fitCenter"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <TextView 
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inform"
            android:textColor="#000000"
            android:textSize="12sp"
            />
        <TextView 
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/xwdt"
            android:textColor="#000000"
            android:textSize="12sp"
            />
        <TextView 
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cgzs"
            android:textColor="#000000"
            android:textSize="12sp"
            />
        <TextView 
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/djgz"
            android:textColor="#000000"
            android:textSize="12sp"
            />
        </LinearLayout>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#3da1d5"
        >
        <ImageView 
            android:id="@+id/iv_start_user"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/u89"
            android:padding="20dp"
            android:scaleType="fitCenter"/>
        <TextView 
            android:id="@+id/tv_remind"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:text="@string/input"
            android:textColor="#ffffff"
            />
        <ImageView 
            android:id="@+id/iv_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/start_goin"
            />
    </LinearLayout>

</LinearLayout>
